# hoshiyomi-rs

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
.github/workflows/: rust.yml
frontend/: app.js  index.html  styles.css
openspec/: project.md
openspec/changes/add-serve-prefix-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-23-add-config-file-loading/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-23-add-following-stars-rss/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-23-add-github-oauth/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-23-add-web-feed-server/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-23-plan-frontend-experience/: design.md  (+2 more)
openspec/changes/plan-advance-api-server/: design.md  proposal.md  tasks.md
openspec/changes/plan-frontend-refresh/: design.md  proposal.md
openspec/changes/plan-frontend-startup-latency/: design.md  proposal.md  tasks.md
openspec/changes/update-api-server-filters/: design.md  proposal.md  tasks.md
openspec/changes/update-readme-guide/: proposal.md  tasks.md
openspec/specs/config-management/: spec.md
openspec/specs/dependencies/: spec.md
openspec/specs/github-auth/: spec.md
openspec/specs/github-following-stars-rss/: spec.md
openspec/specs/web-feed-ui/: spec.md
src/: config.rs  db.rs  feed.rs  github.rs  lib.rs  main.rs  pipeline.rs  server.rs
src/db/: star_query.rs
tests/: frontend_snapshot.rs  integration.rs
tests/fixtures/: frontend_snapshot.html
(+27 files in other folders)
