[package]
name = "Starchaser"
version = "0.1.0"
edition = "2024"

[lib]
name = "starchaser"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream"] }
rss = "2.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
url = "2.5"
futures = "0.3"
warp = { version = "0.4", features = ["server", "test"] }
html-escape = "0.2"
toml = "0.8"
dirs = "5.0"
rand = "0.8"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.10"
